# suffix_automata

./: .gitignore  CMakeLists.txt  README.md  SuffixAutomata
scripts/: 81837.sh  build.sh
src/: 81837.sh  CompactArray.hpp  InputGenerator.cpp  Main.cpp  ShrinkingArray.hpp  SuffixAutomata.cpp  SuffixAutomata.h  SuffixAutomaton.cpp  SuffixAutomaton.h  input_generator.cpp  main.cpp  shrinking_array.cpp  suffix_automata.cpp  suffix_automata_array.cpp  suffix_automata_map.cpp  suffix_automata_shrinking_array.cpp  suffix_automata_struct.cpp
tests/: CompactArrayTests.cpp  Main.cpp  SuffixAutomataTests.cpp
